<resources>
    <string name="app_name">HabitTracker</string>
    <string name="arg">EXIT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_loading">HABIT TRACKER &amp; GOAL PLANNER</string>
    <string name="tick_it">TICK IT!</string>
    <string name="what_time">В какой время вы обычно встаете?</string>
    <string name="what_time_sleep">В какой время вы обычно заканчиваете свой день?</string>
    <string name="create_plan">Создаем ваш план привычек...</string>
    <string name="become_a_better_person">Станьте лучше</string>
    <string name="what_do_you_want">Какова ваша цель?</string>
    <string name="choose_time_go_up">Выберите ваше обычное время подъема</string>
    <string name="choose_time_go_sleep">Перед этим мы напомним вам проверить свой список</string>
    <string name="choosing_habits">Выбираем привычки для вашей цели...</string>
    <string name="start_your_self">Начните увлекательный путь к вашему будущему \"Я\"</string>
    <string name="help_us">Помогите нам лучше понять, что вам требуется</string>
    <string name="choose_first">Выберите первую привычку, которую вы хотели бы выработать</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="plan">Планируйте ежедневные занятия со списком привычек</string>
    <string name="start_now">Начните сейчас</string>
    <string name="next">Следующее</string>
    <string name="miss">Пропустить</string>
    <string name="sleep_8_hours">Спите не менее 8 часов</string>
    <string name="food">Ешьте здоровую пищу</string>
    <string name="drink">Пейте 8 стаканов воды</string>
    <string name="exersize">Упражнения</string>
    <string name="go">Ходите пешком</string>
    <string name="today_navigaiton">Сегодня</string>
    <string name="your_way">Ваш путь</string>
    <string name="history">История</string>
    <string name="me">Я</string>
    <string name="today">Сегодня</string>
    <string name="name_habit">Имя привычки</string>
    <string name="create_new_habit">Создайте новую привычку</string>
    <string name="regular">Регулярная</string>
    <string name="life">Здоровый образ жизни</string>
    <string name="vred">Вредная</string>
    <string name="discription_regular">Часть ваших повседневных привычек.\nРегулярно помечайте их как выполненные.\nНапример: йога три раза в неделю.</string>
    <string name="btn_create">+ СОЗДАТЬ</string>
    <string name="habit_in_trend">Привычки в тренде</string>
    <string name="habit_on_the_world">Идите в ногу со всем миром</string>
    <string name="info_sound">Выбранный звуковой эффект будет использован для общих напоминаний. Для конкретных привычек эффекты можно выбирать отдельно.</string>
    <string name="Icon_сolor">Цвет значка</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="remind_me">Напомните мне</string>
    <string name="every_day">Каждый день</string>
    <string name="congratulate">Поздравляем!</string>
    <string name="everything_is_done">Всё выполнено!</string>
    <string name="you_done_everything_today">Сегодня вы выполнили все\nзапланированные привычки!</string>
    <string name="next_page">Продолжайте</string>
    <string name="select_an_icon">Выберите иконку</string>
    <string name="select_time">Выберите время</string>
    <string name="first_day_of_the_week">Первый день недели</string>
    <string name="share_via">Поделиться через:</string>
    <string name="goal_for_the_day">Цель на день</string>
    <string name="delete_all_the_data">Удалить все данные?</string>
    <string name="are_you_sure_you_want_to_reset">Вы уверены, что хотите сбросить настройки приложения и удалить все данные?</string>
    <string name="ok">Ок</string>
    <string name="active">АКТИВНЫЕ</string>
    <string name="current_series">ТЕКУЩАЯ\nСЕРИЯ</string>
    <string name="the_best_series_of_successes">Лучшая серия успехов: 0</string>
    <string name="the_habit_is_complete">ПРИВЫЧКА\nЗАВЕРШЕНА</string>
    <string name="this_week">Эта неделя: 0</string>
    <string name="completed">ДОЛЯ\nЗАВЕРШЕННЫХ</string>
    <string name="habits">Привычки: 0/6</string>
    <string name="perfect_days">ИДЕАЛЬНЫЕ\nДНИ</string>
    <string name="disposable">Одноразовая</string>
    <string name="every_day_is_done_by_default">Каждый день по умолчанию выполнено. Но если вы сорвались, снимите отметку о выполнении.</string>
    <string name="It_will_remind_you_of_important_things">Напомнит вам о важном разовом событии в выбранную дату.</string>
    <string name="or_choose_from_the_teady_made_ones">ИЛИ ВЫБЕРИТЕ ИЗ УЖЕ ГОТОВЫХ</string>
    <string name="important_habits">Важные привычки</string>
    <string name="refresh_your_life">Освежите свою жизнь\nпростыми действиями</string>
    <string name="less_phone">МЕНЬШЕ ТЕЛЕФОНА\n- БОЛЬШЕ СДЕЛАНО</string>
    <string name="scientifically_proven">Научно доказано, что частое использование телефона не благоприятно влияет на вашу жизнь.</string>
    <string name="main_results">ОСНОВНЫЕ РЕЗУЛЬТАТЫ</string>
    <string name="say_goodbye_to_insomnia">Попрощайтесь c бессонницей</string>
    <string name="communicate_with_your_loved_ones">Общайтесь с близкими</string>
    <string name="get_involved_in_sports">Займитесь спортом</string>
    <string name="learn_new_things">Учитесь новому</string>
    <string name="urther_expectations">ДАЛЬНЕЙШИЕ ОЖИДАНИЯ</string>
    <string name="strengthen_your_mental_health">Укрепите душевное здоровье</string>
    <string name="more_communication_with_loved_ones">Больше общения с близкими</string>
    <string name="It_will_protect_your_eyes">Защитит глаза</string>
    <string name="day_1_7">День 1-7</string>
    <string name="assessment_of_adaptability">Оценка адаптивности</string>
    <string name="these_are_simple_ones">Эти простые, не требующие сверхусилий задачи помогут вам узнать, как выработать новые привычки и преодолеть трудности на начальной стадии</string>
    <string name="day_8_21">День 8-21</string>
    <string name="developing_habits">Выработка привычек: правило 21 дня</string>
    <string name="on_the_formation_of_a_new">На формирование новой привычки обычно уходит 21 день. Процедуры, разработанные с использованием научного подхода, помогут вам проще войти в ритм.</string>
    <string name="day_22_30">День 22-30</string>
    <string name="a_week_to_consolidate">Неделя на закрепление</string>
    <string name="after_forming_a_new_one">После формирования нового образа жизни финальная неделя поможет вам закрепить то, что вы успешно наработали.</string>
    <string name="after_forming_a_new_image">После формирования нового образа жизни финальная неделя поможет вам закрепить то, что вы успешно наработали.</string>
    <string name="the_end_of_the_journey">Окончание путешествия</string>
    <string name="repeat_this_path">Повторите этот путь, чтобы еще больше закрепить свои достижения, или поставьте перед собой новую задачу.</string>
    <string name="feedback">Обратная связь</string>
    <string name="feedback_or_suggestion">Отзыв или предложение</string>
    <string name="enviar">ENVIAR</string>
    <string name="general_settings">Общие настройки</string>
    <string name="time_intervals">Интервалы времени</string>
    <string name="first_day_of_week">Первый день\nнедели</string>
    <string name="sunday">Воскресенье</string>
    <string name="confidentiality_policy">Политика\nконфидициальности</string>
    <string name="delete_all_data">Удалить все данные</string>
    <string name="x_d_in_the_week">X д. в неделю</string>
    <string name="x_d_in_the_month">X д. в Месяц</string>
    <string name="x_d_in_the_year">X д. в год</string>
    <string name="a_long_term_habit">Долгосрочная привычка</string>
    <string name="In_your_list_of_habits">В вашем списке привычек она будет отслеживаться отдельно в категории \'Долгосрочные\'.</string>
    <string name="regular_habit">Регулярная привычка</string>
    <string name="icon">Значок</string>
    <string name="color">Цвет</string>
    <string name="repeat">Повторение</string>
    <string name="habit_days">Дни привычек</string>
    <string name="target">Цель</string>
    <string name="off">Выкл</string>
    <string name="perform">Выполнить...</string>
    <string name="no_matter">Неважно</string>
    <string name="in_the_morning">Утром</string>
    <string name="in_the_afternoon">Днем</string>
    <string name="in_the_evening">Вечером</string>
    <string name="target_on_day">Цель на день</string>
    <string name="advanced_settings">Расширенные настройки</string>
    <string name="notification">Напоминание</string>
    <string name="notification_for_this">Напоминание для этой\nпривычки</string>
    <string name="finish">Окончание</string>
    <string name="data">Дата</string>
    <string name="russian">Русский</string>
    <string name="english">Английский</string>
    <string name="jan_4">4 янв</string>
    <string name="all">Все</string>
    <string name="recommend_for_you">Рекомендовано для вас</string>
    <string name="all_way">Все пути</string>
    <string name="notification_">Уведомления</string>
    <string name="language_parameters">Языковые параметры</string>
    <string name="they_dont_come">Не приходят?</string>
    <string name="general_notification">Общие напоминания</string>
    <string name="morning_habit">Утренние привычки</string>
    <string name="afternoon_habit">Дневные привычки</string>
    <string name="evening_habit">Вечерние привычки</string>
    <string name="sound_effects">Звуковые эффекты</string>
    <string name="system">система по умолчанию</string>
    <string name="privacy_policy_">Privacy Policy</string>
    <string name="privacy_policy_it">Privacy Policy (политика конфиденциальности) — это документ, в котором декларируется IT-продукт — приложение или сайт. Его цель — информировать пользователя о том, как компания использует его данные.</string>
    <string name="my_achievements">Мои достижения</string>
    <string name="you_dont_have_any_achievements_yet">У вас пока нет достижений.</string>
    <string name="completed_habits">Завершенные привычки</string>
    <string name="arhiv">0/6 Архив</string>
    <string name="End_Habit">Завершить\nривычку в\nпервый раз</string>
    <string name="End_Habit_10">Завершить\nпривычку\n10 раз</string>
    <string name="End_Habit_20">Завершить\nпривычку\n20 раз</string>
    <string name="End_Habit_50">Завершить\nривычку в\n50 раз</string>
    <string name="End_Habit_100">Завершить\nпривычку\n100 раз</string>
    <string name="End_Habit_300">Завершить\nпривычку\n300 раз</string>
    <string name="go_to_time">Идите в ногу со временем</string>
    <string name="sound_1">Звук №1</string>
    <string name="sound_2">Звук №2</string>
    <string name="sound_3">Звук №3</string>
    <string name="sound_4">Звук №4</string>
    <string name="plan_your_daily_activities">Планируйте ежедневные занятия\nсо списком привычек</string>
    <string name="regulate_your_life">Регулирйте свою жизнь спомощью умных напоминаний</string>
    <string name="go_to_the_scientific">Отправляйтесь в научно\nразработанный путь</string>
    <string name="do_not_interrupt_the_sequence">Не прерывайте череду успехов и\nзакрепляйте результаты</string>
    <string name="day_end">Конец дня</string>
    <string name="start_on">Начало в</string>
    <string name="you_are_the_best">Вы лучший</string>
    <string name="say_for_you">Скажите это себе, когда проснетесь</string>
    <string name="monday_1">Пн</string>
    <string name="tuesday_1">Вт</string>
    <string name="wednesday_1">Ср</string>
    <string name="thursday_1">Чт</string>
    <string name="friday_1">Пт</string>
    <string name="saturday_1">Сб</string>
    <string name="sunday_1">Вс</string>
    <string name="min_phone">МЕНЬШЕ ТЕЛЕФОНА\n- БОЛЬШЕ СДЕЛАНО</string>
    <string name="bedtime_rituals">Ритуалы перед\nсном</string>
    <string name="finish_trip">Окончание путешествия</string>
</resources>