<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/button_shape_graffit_r12_top_corners"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/montserrat_extra_bold"
        android:gravity="center"
        android:text="@string/first_day_of_the_week"
        android:textColor="@color/text_default_light"
        android:textSize="23sp"
        android:layout_marginBottom="16dp" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/number_picker_days"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:np_dividerColor="@color/wheel_picker"
        app:np_formatter="@string/number_picker_formatter"
        app:np_height="120dp"
        app:np_max="6"
        app:np_min="0"
        app:np_selectedTextColor="@color/white"
        app:np_selectedTextSize="@dimen/cm_dp_26"
        app:np_textColor="@color/wheel_picker_2"
        app:np_textSize="@dimen/dp_24"
        app:np_value="0"
        app:np_width="64dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_negative"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@drawable/button_shape_graffit_light_r24"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_extra_bold"
            android:layout_marginEnd="8dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_positive"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:background="@drawable/button_shape_blue_light_r24"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_extra_bold"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>