<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/button_shape_graffit_r12_top_corners"
    android:padding="16dp">

    <!-- Текст заголовка -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extra_bold"
        android:text="@string/Icon_сolor"
        android:textColor="@color/text_default_light"
        android:textSize="20dp"/>

    <!-- Палитра цветов -->
    <GridLayout
        android:id="@+id/colorPalette"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        android:alignmentMode="alignMargins"
        android:padding="8dp"
        android:layout_marginBottom="24dp" />

    <!-- Кнопки -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@drawable/button_shape_graffit_light_r24"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_extra_bold"
            android:layout_marginEnd="8dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:background="@drawable/button_shape_blue_light_r24"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_extra_bold"
            android:layout_marginStart="8dp" />

    </LinearLayout>

</LinearLayout>
