<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121317"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.navigation_fragment.a.MainFragmentAToday">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_top_corners"
        android:layout_marginTop="90dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_extra_bold"
        android:gravity="center"
        android:text="@string/today"
        android:textSize="30dp"
        android:textColor="@color/text_default_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jan_4"
        android:textColor="#CCD3D2D2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/btnGoToCreateNewHabitFragment"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:rotation="45"
        android:src="@drawable/admob_close_button_white_circle_black_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="@color/primary"
                android:text="@string/all"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:backgroundTint="@color/card_view"
                android:text="@string/in_the_morning"
                android:textColor="@color/white"

                 />

            <Button
                android:id="@+id/button3"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:backgroundTint="@color/card_view"
                android:text="@string/in_the_afternoon"
                android:textColor="@color/white"

                 />

            <Button
                android:id="@+id/button4"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/card_view"
                android:text="@string/in_the_evening"
                android:textColor="@color/white"

                 />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHabits"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_habit"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_shape_graffit_r12"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToCreateNewHabitFragment2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoToCreateNewHabitFragment2"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginHorizontal="28dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/button_shape_graffit_r12"
        android:fontFamily="@font/montserrat_extra_bold"
        android:text="@string/create_new_habit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"/>

    <Button
        android:id="@+id/buttonToday"
        android:visibility="invisible"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/primary"
        android:text="@string/today"
        android:drawableLeft="@drawable/arrow_back"
        android:drawableTint="@color/white"
        android:textSize="18sp"
        android:textColor="@color/white"

        android:layout_marginBottom="185dp"
        android:elevation="10dp"
        android:layout_marginEnd="-20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>